force-app/main/default/objects/NCMT_LPOE_Parametric_Default_SpaceLookup__c/NCMT_LPOE_Parametric_Default_SpaceLookup__c.object-meta.xml
<CustomObject>
    <description>LPOE Parametric GSF</description>
    <label>LPOE Parametric Default Space Lookup</label>
    <nameField>
        <displayFormat>LPOE-GSF-{0000}</displayFormat>
        <label>LPOE Parametric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LPOE Parametric Default Space Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>