force-app/main/default/objects/NCMT_LPOE_Parametric_Default_SpaceLookup__c/fields/GSF_C__c.field-meta.xml
<CustomField>
    <fullName>GSF_C__c</fullName>
    <description>GSF-C</description>
    <inlineHelpText>GSF-C</inlineHelpText>
    <label>GSF-C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>