force-app/main/default/objects/NCMT_LPOE_Parametric_Default_SpaceLookup__c/fields/GSF_MX__c.field-meta.xml
<CustomField>
    <fullName>GSF_MX__c</fullName>
    <description>GSF-MX</description>
    <inlineHelpText>GSF-MX</inlineHelpText>
    <label>GSF-MX</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>