force-app/main/default/objects/NCMT_LPOE_Parametric_Default_SpaceLookup__c/fields/LPOE_Bldg_Group__c.field-meta.xml
<CustomField>
    <fullName>LPOE_Bldg_Group__c</fullName>
    <description>LPOE Bldg Group</description>
    <inlineHelpText>LPOE Bldg Group</inlineHelpText>
    <label>LPOE Bldg Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>