force-app/main/default/objects/NCMT_LPOE_Parametric_Default_SpaceLookup__c/fields/LPOE_Type__c.field-meta.xml
<CustomField>
    <fullName>LPOE_Type__c</fullName>
    <description>LPOE Type</description>
    <inlineHelpText>LPOE Type</inlineHelpText>
    <label>LPOE Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>