force-app/main/default/objects/NCMT_LPOE_Parametric_Default_SpaceLookup__c/fields/Site_Ped__c.field-meta.xml
<CustomField>
    <fullName>Site_Ped__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Site (SF/SF) Ped</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>