force-app/main/default/objects/NCMT_LPOE_Parametric_Default_SpaceLookup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LPOE_Bldg_Group__c</columns>
    <columns>LPOE_Line_Item__c</columns>
    <columns>LPOE_Type__c</columns>
    <columns>GSF_MX__c</columns>
    <columns>GSF_C__c</columns>
    <columns>Site_Veh__c</columns>
    <columns>Site_Ped__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>